--- a/docs/notes/v1.0.0-beta-5.md
+++ b/docs/notes/v1.0.0-beta-5.md
@@ -12,9 +12,11 @@ import ComingSoon from '@site/src/components/ComingSoon'
 
 ## Qodly Studio
 
-<h3> What's New </h3>
+<h3> Highlight </h3>
 
 - New [Page States](../studio/pageLoaders/states.md) Feature: Introducing Page states for dynamically applying various changes to Qodly pages. This feature is useful for modifying the user interface (UI), styling, and other properties on the fly, allowing developers to tailor pages to specific privileges, Qodly Source values, contexts, or scenarios without relying heavily on server-side processing.
+
+<h3> What's new </h3>
 
 - New [`onInit`](../studio/pageLoaders/pageLoaderOverview#triggers-and-events) Event for the Page: This event is executed during the rendering phase and is used to perform any necessary setup actions when a component is first created.
 
@@ -31,9 +33,6 @@ import ComingSoon from '@site/src/components/ComingSoon'
 - Terminology Update: To improve accuracy, some Qodly concepts have been renamed: webforms are now **Pages**, and datasources are now **Qodly sources**.
 
 - Japanese Character Support: Japanese characters are now supported in all elements created in Qodly.
-
-
-<h3>Improvements </h3>
 
 - Scalar Qodly Source Type: Scalar Qodly source types can now be changed post-creation, eliminating the need to delete and recreate them.
 
